syntax = "proto3";

package kv;

option go_package = "github.com/your-username/mytidb/kv-server/proto";

// KV service for client-facing operations
service KV {
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc WriteBatch(WriteBatchRequest) returns (WriteBatchResponse) {}
  rpc Join(JoinRequest) returns (JoinResponse) {}
}

message JoinRequest {
    uint64 node_id = 1;
    string raft_addr = 2;
}

message JoinResponse {}

// Raft service for internal, inter-node communication
service Raft {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
}

// Client-facing messages
message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message PutResponse {
  bool success = 1;
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes value = 1;
  bool found = 2;
}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {
  bool success = 1;
}

message WriteBatchRequest {
  repeated Operation operations = 1;
}

message Operation {
  enum Type {
    PUT = 0;
    DELETE = 1;
  }
  Type type = 1;
  bytes key = 2;
  bytes value = 3;
}

message WriteBatchResponse {
  bool success = 1;
}



// Raft-internal messages
// These are simplified versions of the structures in hashicorp/raft.
// We will need to translate between these and the library's native types.

message AppendEntriesRequest {
    uint64 term = 1;
    bytes leader = 2;
    uint64 prev_log_index = 3;
    uint64 prev_log_term = 4;
    repeated bytes entries = 5; // Each entry is a serialized raft.Log
    uint64 leader_commit = 6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    uint64 term = 1;
    bytes candidate = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool vote_granted = 2;
}